--- a/Twitch.html
+++ b/Twitch.html
@@ -576,7 +576,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">07.02.22 - 13.02.22</p>
+                <p class="lead">14.02.22 - 20.02.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -595,7 +595,7 @@
                         <th scope="row">12:00 - 13:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Unity (wenn nicht variabel)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -605,7 +605,7 @@
                         <th scope="row">13:30 - 15:00</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -615,7 +615,7 @@
                         <th scope="row">15:00 - 16:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
@@ -625,7 +625,7 @@
                         <th scope="row">16:30 - 18:00</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Beat Saber (VR)</td>
                         <td>-</td>
                         <td>Splatoon 2</td>
                         <td>-</td>
@@ -635,7 +635,7 @@
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
                         <td>Rocket League</td>
                         <td>Variabel</td>
                         <td>-</td>
@@ -645,8 +645,8 @@
                         <th scope="row">19:30 - 21:00</th>
                         <td>Cities Skylines/Transport Fever 2</td>
                         <td>-</td>
-                        <td>Beat Saber (VR)</td>
-                        <td>Variabel</td>
+                        <td>-</td>
+                        <td>Minecraft/Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>Collab mit Uzu</td>
@@ -656,7 +656,7 @@
                         <td>Cities Skylines/Transport Fever 2</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Minecraft</td>
+                        <td>Minecraft/Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -666,7 +666,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Minecraft</td>
+                        <td>Minecraft/Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -687,7 +687,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">14.02.22 - 20.02.22</p>
+                <p class="lead">21.02.22 - 27.02.22</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -706,7 +706,7 @@
                         <th scope="row">12:00 - 13:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Unity (wenn nicht variabel)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -716,7 +716,7 @@
                         <th scope="row">13:30 - 15:00</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -726,7 +726,7 @@
                         <th scope="row">15:00 - 16:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
@@ -736,7 +736,7 @@
                         <th scope="row">16:30 - 18:00</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Beat Saber (VR)</td>
                         <td>-</td>
                         <td>Variabel</td>
                         <td>-</td>
@@ -746,7 +746,7 @@
                         <th scope="row">18:00 - 19:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
                         <td>Rocket League</td>
                         <td>Variabel</td>
                         <td>-</td>
@@ -756,8 +756,8 @@
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
                         <td>-</td>
-                        <td>Variabel</td>
-                        <td>Variabel</td>
+                        <td>-</td>
+                        <td>Minecraft/Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -767,7 +767,7 @@
                         <td>Cities Skylines</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Variabel</td>
+                        <td>Minecraft/Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
