--- a/Twitch.html
+++ b/Twitch.html
@@ -595,7 +595,7 @@
                         <th scope="row">12:00 - 13:30</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>Unity (wenn nicht variabel)</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -605,7 +605,7 @@
                         <th scope="row">13:30 - 15:00</th>
                         <td>-</td>
                         <td>-</td>
-                        <td>Variabel</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -618,7 +618,7 @@
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>Animal Crossing New Horizons</td>
-                        <td>-</td>
+                        <td>Don't Starve Together</td>
                         <td>-</td>
                     </tr>
                     <tr>
@@ -628,7 +628,7 @@
                         <td>Beat Saber (VR)</td>
                         <td>-</td>
                         <td>Splatoon 2</td>
-                        <td>-</td>
+                        <td>Don't Starve Together</td>
                         <td>-</td>
                     </tr>
                     <tr>
