--- a/Twitch.html
+++ b/Twitch.html
@@ -475,7 +475,7 @@
                 <div id="SWSP" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p><span class="fw-bolder">Frequenz:</span> Als Spezialstream + auf Nachfrage</p>
-                        <p><span class="fw-bolder">Projekte:</span> Auch wenn das Spial mich ziemlich enttäuscht
+                        <p><span class="fw-bolder">Projekte:</span> Auch wenn das Spiel mich ziemlich enttäuscht
                         hat, bin ich immer mal wieder bereit, gegen euch in diversen Sportarten zu kämpfen :D
                         Pass auf, ich war 5 Jahre im Badmintonverein hehe</p>
                     </div>
